# Sky-Auto-Player

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PORTING_GUIDE.md  README.md  SECURITY.md  Sky-Auto-Player.spec  Sky-Player.spec  diff.patch  extract.py  pyproject.toml  test_out.txt  updater.bat  windows_version_info.txt
.config/: security_audit_baseline.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_p0.md
.github/workflows/: ci.yml  release.yml
docs/: 2026-06_background-worker-lifecycle-hardening-plan.md  2026-07-18_accuracy-refinement-and-fps-ux-plan.md  2026-07-18_core-send-accuracy-full-overhaul-plan.md  2026-07-18_distribution-mpv-pattern-plan.md  2026-07_core-dispatch-refactor-and-isolation-plan.md  2026-07_sendinput-lifecycle-and-timestamp-fidelity-plan.md  INDEX.md  PORTING_GUIDE.md  architecture.md  chord-dispatch-review-2026-06-26.md  chord-polyphony-lead-and-nogil-plan.md  deep-research-report.md  dispatch-chord-timing-residual-review-2026-07-23.md  distribution-and-update.md  docs-cleanup-plan.md  down-hold-up-scheduling-audit.md  faq.html  floor-removal-three-profile-plan.md  hold-min-hold-unification-plan.md  hold-timbre-rhythm-findings.md  index.html  lighthouse-report.html  live-dashboard-step2-unified-app-plan.md  live-dashboard-step2.5-inplace-playback-plan.md  live-dashboard-step2.6-layout-hotkey-polish-plan.md  live-dashboard-step2.7-relayout-and-fps-singlesource-plan.md  live-dashboard-step3-debug-panel-plan.md  llms.txt  playback-flow-hardening-plan.md  release-notes-v2.3.0.md  result.md  robots.txt  rt-dispatch-architecture.md  runtime-hold-refactor-plan.md  rust-migration-plan.md  scheduler-core-architecture-plan.md  sitemap.xml  timing-architecture-audit.md  timing-experiments.md  timing-guard-binding-audit.md  (+4 more)
docs/archive/: 2026-06_background-worker-lifecycle-refactor-brief.md  2026-06_completion-anchor-refactor-plan.md  2026-06_docs-cleanup-plan.md  2026-06_down-hold-up-scheduling-audit.md  2026-06_floor-removal-three-profile-plan.md  2026-06_hold-min-hold-unification-plan.md  2026-06_play-input-architecture-refactor-plan.md  2026-06_playback-flow-hardening-plan.md  2026-06_playback-input-investigation-2026-06-06.md  2026-06_realtime-sender-thread-refactor-plan.md  2026-06_remove-classic-ui-plan.md  2026-06_rt-pipeline-extreme-optimization-plan.md  2026-06_runtime-hold-refactor-plan.md  2026-06_scheduler-core-architecture-plan.md  2026-06_timing-architecture-audit.md  2026-06_timing-experiments.md  2026-06_timing-guard-binding-audit.md  2026-06_ui-overhaul-textual-plan.md  2026-06_wasapi-loopback-measurement-plan.md  2026-07-18_retry-reenable-and-jitter-refinement-plan.md  2026-07-18_round2-precision-overhaul-plan.md  2026-07-18_spin-lead-audit-and-hotpath-optimization-plan.md  2026-07_ram-memory-hygiene-plan.md  2026-07_ui-cpu-ram-optimization-plan.md  chord-dispatch-refactor-plan-2026-06-26.md  chord-dispatch-review-2026-06-26.md  chord-polyphony-lead-and-nogil-plan.md  chord-stagger-remote-drops.md  core-dispatch-hygiene-and-tail-latency-plan.md  dispatch-core-code-audit-2026-07-22.md  dispatch-tail-latency-and-measurement-fix-plan.md  first-note-epoch-rebase-plan.md  hold-timbre-rhythm-diagnosis-plan-2026-06-26.md  hold-timbre-rhythm-refactor-plan-2026-06-26.md  keyboard-reliability-and-safety-plan.md  live-dashboard-step2.8-fps-single-source-no-unframed-plan.md  live-playback-dashboard-plan.md  main-path-cleanup-and-build-quality-plan.md
docs/assets/: og-banner.avif  preview.avif
docs/perf-baselines/: 2026-06-baseline.md  2026-07-core-send-overhaul-baseline.md  2026-07-refactor-baseline.md
docs/plan/: 2026-07-18_core-send-accuracy-full-overhaul-plan.md  2026-07-19_updater-cleanup-and-refinement-plan.md  2026-07-23_dispatch-chord-timing-residual-improvement-plan.md  2026-07-23_dispatch-core-correctness-hardening-plan.md  2026-07-24_rename-update-cutover-v2.4.2-plan.md
docs/vi/: index.html
installer/: updater.ps1
scripts/: audit_free_threaded_wheels.py  audit_pipeline_bench.py  audit_repeat_gap.py  audit_same_key_gap.py  audit_security_mandates.py  measure_dispatch_tail.py  measure_hold_rhythm.py  mem_after_play.py  mem_attrlite.py  mem_engine_attr.py  mem_verify_fix.py  winget_update_pr.ps1
songs/: .init.json  Comedy.json  TEST_chords.json  TEST_metro_alt_120.json  TEST_metro_alt_200.json  TEST_metro_alt_500.json  TEST_metro_same_200.json  TEST_repeat_clean_144.json  TEST_repeat_clean_60.json  TEST_repeat_floor_144.json  TEST_repeat_floor_60.json  TEST_repeat_gap.json  TEST_repeat_gap_30.json  TEST_repeat_gap_fine_a.json  TEST_repeat_gap_fine_b.json  TEST_repeat_gap_fine_c.json  TEST_repeat_staircase.json  TEST_rolled_chord_18.json  TEST_visibility.json  Thang dien.json  one summer's day.json  Đợi 52hz.json
src/: build_app.py  main.py  simulate_update.py
src/sky_music/: __init__.py  (+3 more)
tests/: acceptance_completion_anchor.py  analyze_onsets.py  analyze_send_warmup.py  audio_loopback.py  bench_sendinput.py  conftest.py  generate_snapshots.py  golden_engine_timeline.json  make_test_song.py  measure_conflict_matrix.py  measure_stutter.py  measure_stutter_live.py  measure_stutter_original.py  probe_postmessage.py  repro_roundtrip.py  test_abort_telemetry.py  test_acceptance_flow.py  test_accuracy_refinement_invariants.py  test_adaptive_lead.py  test_adaptive_spin.py  test_advanced.py  test_backend_hotpath.py  test_background_lifecycle.py  test_background_worker_static_guard.py  test_build_bridge_package.py  test_calibration.py  test_classic_picker_lifecycle.py  test_cli.py  test_command_palette_responsive.py  test_command_palette_scroll.py  test_core_boundary.py  test_core_send_overhaul_invariants.py  test_dispatch_audit_baseline_2026_07_23.py  test_empirical_floors.py  test_engine_equivalence.py  test_engine_refactor.py  test_focus_input_lifecycle.py  test_focus_restore_grace.py  test_golden_dispatch_timeline.py  test_golden_regression.py  (+55 more)
(+74 files in other folders)
