[project]
name = "sky-player"
version = "2.2.4"
description = "Sky Music Player"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "rapidfuzz>=3.14.5",
    "textual>=8.2.7",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sky_music*"]

[tool.setuptools]
py-modules = ["main", "build_app"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pyright>=1.1.410",
    "pytest-textual-snapshot>=1.1.0",
    "ruff>=0.15.16",
    "soundcard>=0.4.6",
]

[project.scripts]
play = "main:main"
build-app = "build_app:main"

[tool.pyright]
# Keep typecheck signal on first-party code: dist/ contains PyInstaller-bundled third-party
# sources and build/ is generated output.
exclude = [
    "dist",
    "build",
    ".venv",
    "**/__pycache__",
]
