[project]
name = "sky-player"
version = "2.3.2"
description = "Sky Music Player"
readme = "README.md"
# The dispatch loop tight-spins on `time.perf_counter_ns` for up to ~800 us per action, and a
# parallel Textual live-dashboard thread runs alongside it. Under CPython's standard GIL the spin
# window can starve the UI thread (or vice versa) and yields tail-latency spikes around 100-250 us
# while a std-GIL + 1 ms switch-interval tuning pushes measurement noise around the spinner. The
# 3.14 free-threaded build (`cpython-3.14+freethreaded`) cleanly decouples the two threads so the
# spinner can no longer pre-empt the UI renderer. `rapidfuzz 3.14.5` and `textual 8.2.7` both ship
# free-threaded-compatible wheels and run unchanged under no-GIL. The exact interpreter is pinned
# by `.python-version`; keep these two in sync.
requires-python = ">=3.14,<3.15"
dependencies = [
    "rapidfuzz>=3.14.5",
    "textual>=8.2.7",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sky_music*"]

[tool.setuptools]
py-modules = ["main", "build_app"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pyright>=1.1.411",
    "pytest-textual-snapshot>=1.1.0",
    "ruff>=0.15.20",
    "soundcard>=0.4.6",
]

[project.scripts]
play = "main:main"
build-app = "build_app:main"

[tool.pyright]
# ── Analysis scope ──────────────────────────────────────────────────────
# Standard mode throughout — strict-mode reportUnknown* diagnostics are
# library‑boundary noise (Textual, Win32 ctypes) and not actionable.
typeCheckingMode = "standard"

include = ["src", "tests"]

exclude = [
    "dist",
    "build",
    ".venv",
    "**/__pycache__",
]

# ── Target ──────────────────────────────────────────────────────────────
pythonVersion = "3.14"
pythonPlatform = "Windows"

# ── Type evaluation — maximum precision ─────────────────────────────────
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true
useLibraryCodeForTypes = true
deprecateTypingAliases = true
disableBytesTypePromotions = true
enableReachabilityAnalysis = true

# ── Global diagnostics ──────────────────────────────────────────────────
# Standard mode already catches argument‑type mismatches, optional‑access
# errors, return‑type violations, and most real bugs. The extras below are
# noiseless checks that spot rot without any false positives.
reportUnusedImport = "error"
reportDeprecated   = "error"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = [
    "UP",   # pyupgrade — modern syntax for 3.14
    "I",    # isort — consistent import ordering
    "B",    # flake8-bugbear — bug detection
    "RUF",  # ruff-specific — noqa validation etc.
    "PERF", # perflint — performance patterns
    "SIM",  # flake8-simplify — simplify expressions
    "C4",   # flake8-comprehensions — prefer comprehensions
    "ARG",  # flake8-unused-arguments — catch dead params
    "RET",  # flake8-return — return consistency
]
ignore = [
    "RUF001", # ambiguous‑unicode in strings — Vietnamese chars are legitimate
    "RUF002", # ambiguous‑unicode in docstrings
    "RUF003", # ambiguous‑unicode in comments
    "RUF009", # function call in dataclass default — Microseconds(n) is a NewType, fine
    "RUF012", # mutable class default — Textual BINDINGS lists are standard idiom
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["ARG"]          # utility scripts — unused params are expected
"tests/*" = ["ARG", "SIM115"]  # test fixtures: unused params, contextlib patterns
